--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
   <body>
     <div class="container">
       <div class="wrapper">
-        <h1 class="titulo"></h1>
+        <h1 class="titulo">Lista de Tareas</h1>
+        <button id="boton-agregar" class="boton-agregar">
+          Agregar una tarea
+        </button>
+        <ul class="lista-tareas"></ul>
+        <button class="boton-limpiar">Limpiar todas las tareas</button>
       </div>
-      <button id="boton-agregar" class="boton-agregar">Agregar una tarea</button>
-      <ul class="lista-tareas"></ul>
-      <button class="boton-limpiar"></button>
     </div>
-    <script src="js/main.js" type="module"></script>
+    <script type="module" src="js/main.js"></script>
   </body>
 </html>
