--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/stylesV2.css" />
     <title>Lista de Tareas - POO (Examen Tema 4 - DWEC/DIW)</title>
   </head>
   <body>
     <div class="container">
       <div class="wrapper">
-        <h1 class="titulo">Lista de Tareas</h1>
+        <div class="header">
+          <h1 class="titulo">Lista de Tareas</h1>
+        </div>
         <button id="boton-agregar" class="boton-agregar">
           Agregar una tarea
         </button>
